<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SplashLoginTabs.Register"
    android:paddingLeft="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:gravity="center"
    android:fitsSystemWindows="true"
    tools:showIn="@layout/activity_splash_login">

<!--TODO: UserRegister Username-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUserRegisterUname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent_whitebox_withradius"
        android:nextFocusDown="@id/tilUserRegisterEmail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUserRegisterUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="text"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/uname"
            android:drawableEnd="@drawable/icon_userx16"
            android:drawableRight="@drawable/icon_userx16"
            android:textColorHint="@color/clouds"
            android:textCursorDrawable="@null"
            android:background="@color/transparent"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

<!--TODO: UserRegister Email-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUserRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent_whitebox_withradius"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tilUserRegisterUname"
        android:nextFocusDown="@id/tilUserRegisterPword">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUserRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="text"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/email"
            android:drawableEnd="@drawable/icon_emailx16"
            android:drawableRight="@drawable/icon_emailx16"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/clouds"
            android:background="@color/transparent"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

<!--TODO: UserRegister Password-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUserRegisterPword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent_whitebox_withradius"
        android:layout_below="@id/tilUserRegisterEmail"
        android:layout_marginTop="10dp"
        android:nextFocusDown="@id/tilUserRegisterConfirmPword">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUserRegisterPword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/password"
            android:textCursorDrawable="@null"
            android:drawableRight="@drawable/icon_keyx16"
            android:drawableEnd="@drawable/icon_keyx16"
            android:textColorHint="@color/clouds"
            android:background="@color/transparent"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

<!--TODO: UserRegister Confirm Password-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUserRegisterConfirmPword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent_whitebox_withradius"
        android:layout_below="@id/tilUserRegisterPword"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUserRegisterConfirmPword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/confirmPword"
            android:textCursorDrawable="@null"
            android:drawableRight="@drawable/icon_keyx16"
            android:drawableEnd="@drawable/icon_keyx16"
            android:textColorHint="@color/clouds"
            android:background="@color/transparent"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnUserRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_button_blue"
        android:layout_below="@id/tilUserRegisterConfirmPword"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>